<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/pb_strength"
        android:layout_width="0dp"
        android:layout_height="@dimen/distance_3_1"
        app:rcBackgroundColor="@color/progressPolicyBackground"
        android:layout_marginStart="@dimen/distance_4_6"
        android:layout_marginEnd="@dimen/distance_4_6"
        android:layout_marginTop="@dimen/distance_4_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ic_low_upper_case"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_4"
        app:layout_constraintStart_toStartOf="@+id/ic_minimum_length"
        app:layout_constraintTop_toBottomOf="@+id/ic_minimum_length"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/tv_low_upper_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_low_upper_case"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_low_upper_case"
        app:layout_constraintStart_toEndOf="@+id/ic_low_upper_case"
        app:layout_constraintTop_toTopOf="@+id/ic_low_upper_case" />

    <ImageView
        android:id="@+id/ic_accent_mark_case"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_4"
        android:layout_marginBottom="@dimen/distance_4_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ic_special_character"
        app:layout_constraintTop_toBottomOf="@+id/ic_special_character"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/tv_accent_mark_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_accent_mark_case"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_accent_mark_case"
        app:layout_constraintStart_toEndOf="@+id/ic_accent_mark_case"
        app:layout_constraintTop_toTopOf="@+id/ic_accent_mark_case" />

    <ImageView
        android:id="@+id/ic_number"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_4"
        app:layout_constraintStart_toStartOf="@+id/ic_low_upper_case"
        app:layout_constraintTop_toBottomOf="@+id/ic_low_upper_case"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_number_case"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_number"
        app:layout_constraintStart_toEndOf="@+id/ic_number"
        app:layout_constraintTop_toTopOf="@+id/ic_number" />

    <ImageView
        android:id="@+id/ic_special_character"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_4"
        app:layout_constraintStart_toStartOf="@+id/ic_number"
        app:layout_constraintTop_toBottomOf="@+id/ic_number"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/tv_special_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_special_character_case"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_special_character"
        app:layout_constraintStart_toEndOf="@+id/ic_special_character"
        app:layout_constraintTop_toTopOf="@+id/ic_special_character" />

    <ImageButton
        android:id="@+id/ib_special_characters_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/distance_4_2"
        app:layout_constraintBottom_toBottomOf="@+id/tv_special_characters"
        app:layout_constraintStart_toEndOf="@+id/tv_special_characters"
        app:layout_constraintTop_toTopOf="@+id/tv_special_characters"
        app:srcCompat="@drawable/ic_information_tooltip" />

    <ImageView
        android:id="@+id/ic_minimum_length"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_4"
        android:layout_marginBottom="@dimen/distance_4_6"
        app:layout_constraintStart_toStartOf="@+id/ic_message_alert"
        app:layout_constraintTop_toBottomOf="@+id/ic_message_alert"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/tv_minimum_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_minimum_length_case"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_minimum_length"
        app:layout_constraintStart_toEndOf="@+id/ic_minimum_length"
        app:layout_constraintTop_toTopOf="@+id/ic_minimum_length" />

    <TextView
        android:id="@+id/tv_message_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_4_2"
        android:fontFamily="@font/omnes_regular"
        android:text="@string/password_policy_title_alert_message"
        android:textColor="@color/passwordLibraryDarkGray"
        android:textSize="@dimen/mediumFontSize"
        app:layout_constraintBottom_toBottomOf="@+id/ic_message_alert"
        app:layout_constraintEnd_toEndOf="@+id/pb_strength"
        app:layout_constraintStart_toEndOf="@+id/ic_message_alert"
        app:layout_constraintTop_toTopOf="@+id/ic_message_alert" />

    <ImageView
        android:id="@+id/ic_message_alert"
        android:layout_width="@dimen/distance_5_3"
        android:layout_height="@dimen/distance_5_3"
        android:layout_marginTop="@dimen/distance_4_3"
        app:layout_constraintStart_toStartOf="@+id/pb_strength"
        app:layout_constraintTop_toBottomOf="@+id/pb_strength"
        app:srcCompat="@drawable/ic_alert_message" />



</androidx.constraintlayout.widget.ConstraintLayout>